mash: Use TYPE_MENU for parent of a RWHVAura menu popup

DesktopNativeWidgetTopLevelHandler::CreateParentWindow use
TYPE_MENU to create parent for RWHVAura menu popup. This
matches the classic behavior and fixes the problem on ChromeOS
OOBE screen.

Bug: 716233
Change-Id: Ifcfe23ab80e4741f3d629180c6b54ebe0acd727d
Reviewed-on: https://chromium-review.googlesource.com/c/1384633
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617943}